<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>truncated_svd_solver</name>
  <version>0.0.1</version>
  <description>Truncated-SVD linear solver:
   It uses a combination of SP-QR and SVD.
   The right part of the input matrix can be marginalized out and solved
   by SVD, while the rest of the variables are solved with SPQR.
  </description>
  
  <license>BSD</license>
  <url type="website">https://github.com/ethz-asl/truncated_svd_solver</url>
  <author email="jerome.maye@mavt.ethz.ch">Jerome Maye</author>
  <maintainer email="schneith@ethz.ch">Thomas Schneider</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>glog_catkin</depend>
  <depend>suitesparse</depend>
  <depend>TBB</depend>
</package>
